TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "128884247695312" [label="Start"];
  "128884247695312" -> "128884247694400";
  "128884247694400" [label="Code"];
  "128884247694400" -> "128884247696368";
  "128884247696368" [label="Function"];
  "128884247696368" -> "128884247693392";
  "128884247696368" -> "128884247699056";
  "128884247696368" -> "128884247696512";
  "128884247693392" [label="main IDENTIFIER"];
  "128884247699056" [label="Parameters"];
  "128884247696512" [label="Code"];
  "128884247696512" -> "128884247697232";
  "128884247696512" -> "128884247697856";
  "128884247697232" [label="Code"];
  "128884247697232" -> "128884247694448";
  "128884247694448" [label="Declaration"];
  "128884247694448" -> "128884247697616";
  "128884247694448" -> "128884247696560";
  "128884247697616" [label="x IDENTIFIER"];
  "128884247696560" [label="1 INT"];
  "128884247697856" [label="Code"];
  "128884247697856" -> "128884247694496";
  "128884247694496" [label="Declaration"];
  "128884247694496" -> "128884247696656";
  "128884247694496" -> "128884247697664";
  "128884247696656" [label="x IDENTIFIER"];
  "128884247697664" [label="2 INT"];
}
